--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@loopmode/dis-gui",
-  "version": "2.0.2",
+  "version": "2.0.3",
   "description": "An extensible, styleable, & React-based controller library inspired by the venerable dat-gui.",
   "main": "lib/index.js",
   "scripts": {
@@ -11,27 +11,27 @@
   },
   "license": "Unlicense",
   "dependencies": {
+    "immutability-helper": "^2.4.0",
     "lodash.clonedeep": "^4.5.0",
     "lodash.merge": "^4.6.0",
     "sprintf": "^0.1.5"
   },
   "peerDependencies": {
     "react": "^15.3.0",
-    "react-addons-update": "^15.3.1",
     "react-dom": "^15.3.0"
   },
   "devDependencies": {
-    "babelify": "^7.3.0",
-    "browserify": "^13.1.0",
-    "budo": "^9.0.0",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.24.1",
+    "babelify": "^7.3.0",
+    "browserify": "^13.1.0",
+    "budo": "^9.0.0",
     "esdoc": "^0.5.2",
-    "regl": "^1.1.1",
-    "gl-mat4": "^1.1.4"
+    "gl-mat4": "^1.1.4",
+    "regl": "^1.1.1"
   },
   "keywords": [
     "dat-gui",
