--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@loopmode/dis-gui",
-  "version": "2.0.7",
+  "version": "2.0.8",
   "description": "An extensible, styleable, & React-based controller library inspired by the venerable dat-gui.",
   "main": "lib/index.js",
   "scripts": {
@@ -17,6 +17,7 @@
     "sprintf": "^0.1.5"
   },
   "peerDependencies": {
+    "prop-types": "^15.6.0",
     "react": "^15.3.0",
     "react-dom": "^15.3.0"
   },
@@ -31,6 +32,7 @@
     "budo": "^9.0.0",
     "esdoc": "^0.5.2",
     "gl-mat4": "^1.1.4",
+    "prop-types": "^15.6.0",
     "regl": "^1.1.1"
   },
   "keywords": [
