--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@loopmode/dis-gui",
+  "name": "dis-gui",
   "version": "2.0.9",
   "description": "An extensible, styleable, & React-based controller library inspired by the venerable dat-gui.",
   "main": "lib/index.js",
@@ -43,6 +43,9 @@
     "control"
   ],
   "author": "Rye Terrell <ryeterrell@ryeterrell.net>",
+  "contributors": [
+    "Jovica Aleksic <jovica.aleksic@loopmode.de>"
+  ],
   "directories": {
     "example": "example"
   },
